--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 Flask>=3.0.0
-Werkzeug==3.0.1 
+gunicorn==21.2.0
+Werkzeug==3.0.1
+psycopg2-binary>=2.9.10
+SQLAlchemy>=1.4.0
+python-dotenv>=0.19.0
