--- a/k8s/Balancer-servise.yaml
+++ b/k8s/Balancer-servise.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Balanscer-service
+  name: balanscer-service
   namespace: ingress-nginx
 spec:
   selector:
