--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -15,6 +15,7 @@ spec:
         backend:
           service:
             name: app-config
+            namespace: test-deploy
             port:
               number: 5000
       - path: /flask-app-pr1
@@ -22,5 +23,6 @@ spec:
         backend:
           service:
             name: flask-app-pr1
+            namespace: test-deploy
             port:
               number: 5000
