--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -21,6 +21,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: flask-app-pr1--service
+            name: flask-app-pr1-service
             port:
               number: 5000
