--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,23 +3,20 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Важно для корректного перенаправления
 spec:
   rules:
-  - host: app-config.school59-ekb.ru  # Домен для app-config
+  - host: app-config.school59-ekb.ru  # Единый домен
     http:
       paths:
-      - path: /
+      - path: /config(/|$)(.*)  # Путь /config
         pathType: Prefix
         backend:
           service:
             name: app-config-service
             port:
               number: 5000
-  - host: flask-app.school59-ekb.ru    # Домен для flask-app-pr1
-    http:
-      paths:
-      - path: /
+      - path: /flask(/|$)(.*)   # Путь /flask
         pathType: Prefix
         backend:
           service:
