--- a/app_config/Dockerfile
+++ b/app_config/Dockerfile
@@ -44,8 +44,7 @@ ENV PATH="/opt/venv/bin:$PATH" \
 
 # Создаем непривилегированного пользователя
 RUN groupadd -r appuser && useradd -r -g appuser appuser && \
-    chown -R appuser:appuser /app && \
-    mkdir -p /app/configures && chown appuser:appuser /app/configures
+    chown -R appuser:appuser /app &&
 
 # Переключаемся на непривилегированного пользователя
 USER appuser
