--- a/Pattern Folder/k8s/deployment.yaml
+++ b/Pattern Folder/k8s/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: flask-app     # Метка, которая будет у создаваемых pod'ов
+        version: "0.0"
     spec:
       imagePullSecrets:
       - name: ghcr-secret
