inital commit database-connector-service and update ingress

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -23,3 +23,10 @@ spec:
             name: flask-app-pr1-service
             port:
               number: 5000
+      - path: /db(/|$)(.*)   # Путь /db ТОЛЬКО НА ВРЕМЯ РАЗРАБОТКИ КОННЕКТОРА
+        pathType: Prefix
+        backend:
+          service:
+            name: database-connector-service
+            port:
+              number: 5000
